--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <section class="introText"> 
             <div class="col-lg-10 col-xs-12">
                 <h5>Hi, I'm Jess!</h5>
-                <p>I'm a Senior UI/UX Designer currently creating products at <a href="https://xmog.com">Transmogrify</a> and living outside the City of <del>Brotherly Love</del> Sisterly Affection.</p>
+                <p>I'm a Senior UI/UX Designer currently creating products at <a href="https://xmog.com" target="_blank" rel="noopener noreferrer">Transmogrify</a> and living outside the City of <del>Brotherly Love</del> Sisterly Affection.</p>
             </div>
         </section>
         <div class="container row"> 
@@ -47,7 +47,7 @@
             </div>
             <div class="offset-lg-1 col-lg-3 col-xs-12 credits">
                 <h6>Contact</h6>
-                <p>Get in touch for a chat or to see my work through <a href="mailto:gaito.jess@gmail.com">Email</a> or <a href="https://www.linkedin.com/in/jessgaito/">LinkedIn</a>.</p>
+                <p>Get in touch for a chat or to see my work through <a href="mailto:gaito.jess@gmail.com">Email</a> or <a href="https://www.linkedin.com/in/jessgaito/" target="_blank" rel="noopener noreferrer">LinkedIn</a>.</p>
             </div>
         </div>
             
@@ -55,9 +55,9 @@
     
     <footer class="container-fluid">
         <div class="container">
-            <a href="https://dribbble.com/jessgaito"><i class="fab fa-dribbble"></i></a>
-            <a href="https://www.linkedin.com/in/jessgaito/"><i class="fab fa-linkedin-in"></i></a>
-            <a href="https://github.com/jgait0"><i class="fab fa-github"></i></a>
+            <a href="https://dribbble.com/jessgaito" target="_blank" rel="noopener noreferrer"><i class="fab fa-dribbble"></i></a>
+            <a href="https://www.linkedin.com/in/jessgaito/" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://github.com/jgait0" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
             <!-- <i class="fab fa-behance"></i> -->
             <!-- <i class="fab fa-linkedin"></i> -->
             <p>&copy; Jess Gaito 2021</p>
