--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <section class="introText"> 
             <div class="col-lg-10 col-xs-12">
                 <h5>Hi, I'm Jess!</h5>
-                <p>I'm a Senior UI/UX Designer currently creating products at <a href="https://xmog.com" target="_blank" rel="noopener noreferrer">Transmogrify</a> and living outside the City of <del>Brotherly Love</del> Sisterly Affection.</p>
+                <p>I'm a Senior UI/UX Designer currently creating products at <a href="https://xmog.com" target="_blank" rel="noopener noreferrer">Transmogrify</a> and living outside Philadelphia.</p>
             </div>
         </section>
         <div class="container row"> 
